--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -135,6 +135,9 @@ Release 2.7.4 - UNRELEASED
     HADOOP-14374. License error in GridmixTestUtils.java.
     (lixinglong via aajisaka)
 
+    HADOOP-14100. Upgrade Jsch jar to latest version to fix vulnerability in
+    old versions. (Vinayakumar B and Brahma Reddy Battula via aajisaka)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
